[package]
name = "wordle"
version = "0.1.0"
edition = "2021"
description = "A word guessing game as the homework for a Rust course."
authors = ["Yufan You <youyf21@mails.tsinghua.edu.cn>"]
default-run = "wordle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
gui = ["dep:arboard", "dep:eframe"]

[[bin]]
name = "wordle-solver"
path = "src/bin/solver.rs"

[[bin]]
name = "wordle-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[dependencies]
anyhow = "1.0.62"
arboard = { version = "2.1.1", optional = true }
atty = "0.2"
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
eframe = { version = "0.19.0", optional = true }
ordinal = "0.3.2"
rand = "0.8.5"
rayon = "1.5.3"
readonly = "0.2.2"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"

[dev-dependencies]
lazy_static = "1.0"
assert-json-diff = "2.0"
ntest = "0.8"
pretty_assertions = "1.2.1"
